@@ -9,14 +9,33 @@ class AgentConfig:
     Dataclass that represents agent config
     """
 
-    deployment_name: str
+    #deployment_name: str
 
-    # TODO - add a method to verify if the deployment name is real/available
+    provider: str = None  # for first-party hosted model
+    endpoint: str = None  # for API hosted model
+    model: str            # name of the model (read from cli)
+    tokenizer: str = None # optional, for models that need it
+
+    def __post_init__(self):
+        if self.provider is None and self.endpoint is None:
+            raise ValueError("At least one of model provider or API endpoint must be specified.")
+        if self.model is None:
+            raise ValueError("Model name must be specified.")
+
+    def deployment_name(self) -> str:
+        return f"{self.provider}/{self.model}"
 
     @staticmethod
     def from_dict(d: dict) -> "AgentConfig":
+        for field in ["provider", "endpoint", "model", "tokenizer"]:
+            if field not in d:
+                d[field] = None
         return AgentConfig(
-            deployment_name=d["deployment_name"],
+            #deployment_name=d["deployment_name"],
+            provider = d["provider"],
+            endpoint = d["endpoint"],
+            model = d["model"],
+            tokenizer = d["tokenizer"],
         )
 
 @dataclass(frozen=True)
